update eca script

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </h1>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
   <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.js"></script>
-  <script src="fourier.js"></script>
+  <script src="eca.js"></script>
 
 </body>
 </html>
