--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
   <title>
-    Processing Sketch
+    Game of Life
   </title>
 </head>
 <body style="background-color: black; margin-top: 50px; text-align: center;">
   <h1 style="font-family: Verdana; color: white;">
-      p5.js Sketches
+      Conway's Game of Life: press SHIFT to pause & CTRL to clear
   </h1>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
   <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.js"></script>
