--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <html>
 <head>
+
   <title>
-    Processing Sketch
+    p5.js
   </title>
+  <link rel="shortcut icon" href="C:\Users\User\Programming\p5.js\favicon.ico" type="image/x-icon">
+  <link rel="icon" href="C:\Users\User\Programming\p5.js\favicon.ico" type="image/x-icon">
+
 </head>
+
 <body style="background-color: black; margin-top: 50px; text-align: center;">
-  <h1 style="font-family: Verdana; color: white;">
-      p5.js Sketches
-  </h1>
+
+  <!--<script src="p5.js"></script>-->
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
   <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.js"></script>
-  <script src="eca.js"></script>
+
+  <script src="vectors.js" type="module"></script>
+
+  <script src="vectors.js"></script>
 
 </body>
 </html>
