--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 
@@ -18,7 +19,7 @@
 
   <!--<script src="vectors.js" type="module"></script>-->
 
-  <script src="eca.js"></script>
+  <script src="ants.js"></script>
 
 </body>
 </html>
