--- a/index.html
+++ b/index.html
@@ -5,21 +5,20 @@
   <title>
     p5.js
   </title>
-  <link rel="shortcut icon" href="C:\Users\User\Programming\p5.js\favicon.ico" type="image/x-icon">
-  <link rel="icon" href="C:\Users\User\Programming\p5.js\favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="C:\Users\User\Programming\p5.js\images\favicon.ico" type="image/x-icon">
+  <link rel="icon" href="C:\Users\User\Programming\p5.js\images\favicon.ico" type="image/x-icon">
 
 </head>
 
-<body style="background-color: black; margin-top: 50px; text-align: center;">
+<body style="background-color: black; text-align: center;">
 
-  <!--<script src="p5.js"></script>-->
-  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
-  <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.js"></script>
+  <!-- <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.js"></script> -->
+  <!-- <script src="scripts\p5.js"></script> -->
 
   <!--<script src="vectors.js" type="module"></script>-->
 
-  <script src="ants.js"></script>
+  <script src="voronoi.js"></script>
 
 </body>
 </html>
