aggregated project into one home page

--- a/index.html
+++ b/index.html
@@ -2,23 +2,41 @@
 <html>
 <head>
 
-  <title>
-    p5.js
-  </title>
-  <link rel="shortcut icon" href="C:\Users\User\Programming\p5.js\images\favicon.ico" type="image/x-icon">
-  <link rel="icon" href="C:\Users\User\Programming\p5.js\images\favicon.ico" type="image/x-icon">
+    <title>
+        Visualization with Processing
+    </title>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
 
 </head>
 
-<body style="background-color: black; text-align: center;">
+<body>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
-  <!-- <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.js"></script> -->
-  <!-- <script src="scripts\p5.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
 
-  <!--<script src="vectors.js" type="module"></script>-->
+    <!-- <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.js"></script> -->
+    <!-- <script src="scripts\p5.js"></script> -->
+    <!--<script src="vectors.js" type="module"></script>-->
 
-  <script src="voronoi.js"></script>
+    <h1>p5.js</h1>
+
+    <div class="content">
+        <h2>Harnessing the power of Processing for data visualization and numerical modeling.</h2>
+
+        <dl>
+            <a class="project" href="pages/boids.html">
+            <dt><span class="idNumber">#112320: </span>Boids</dt>
+            <dd>Flocking behavior</dd>
+            </a>
+
+            <!-- <dt>Kinematic Arm</dt>
+            <dd>Foward and inverse kinematic simulation</dd>
+
+            <dt>Epicycloids</dt>
+            <dd>Visualizing fourier series and beat harmonics</dd> -->
+
+        </dl>
+    </div>
 
 </body>
 </html>
